--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^5.7.0"
-  },
-  "devDependencies": {
+    "mongodb": "^5.7.0",
+    "typescript": "^5.1.6",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.3.2",
+    "@types/node": "^20.3.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "ts-node": "^10.9.1"
   }
 } 
